# EvolveAi_AgenticSprint_Synapse

./: .env  .gitignore  .replit  README.md  app.py  auth_manager.py  check_api.py  data_processor.py  database.py  diagnostic_engine.py  medical_assistant.db  patient_data_01.txt  pyproject.toml  replit.md  requirements.txt  ui_components.py  user_dashboard.py
.streamlit/: config.toml
attached_assets/: _1758097345916.gitignore  _1758097345917.env  _1758097345920.replit  app_1758097345918.py  auth_pages_1758097345921.py  data_processor_1758097345922.py  database_1758097345923.py  diagnostic_engine_1758097345916.py  medical_assistant_1758097345915.db  pyproject_1758097345924.toml  replit_1758097345926.md  requirements_1758097345919.txt  ui_components_1758097345927.py  user_dashboard_1758097345928.py
